[metadata]
name = viya4-ark
author = SAS Institute Inc.
summary = The SAS Viya Administration Resource Kit (SAS Viya ARK) provides tools and utilities to help SAS customers prepare for and gather information about a SAS Viya platform deployment.
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/sassoftware/viya4-ark
license = Apache-2.0
